// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TextInput /> > labelTitle > sets label 1`] = `
<div
  class="tw:form-control "
>
  <label
    class="tw:label tw:pb-1"
  >
    <span
      class="tw:block tw:text-sm tw:font-medium tw:text-base-content/50 tw:mb-1"
    >
      My Title
      :
    </span>
  </label>
  <input
    class="tw:input tw:input-bordered tw:w-full "
    placeholder=""
    required=""
    type="text"
    value=""
  />
</div>
`;

exports[`<TextInput /> > renders properly 1`] = `
<div
  class="tw:form-control "
>
  <input
    class="tw:input tw:input-bordered tw:w-full "
    placeholder=""
    required=""
    type="text"
    value=""
  />
</div>
`;
